chore: :fire: remove hotel info endpoint
